# ClawSkillsScout

./: .gitignore  AGENTS.md  README.md  clawhub-10k-system.html  clawhub-download-insights.html  clawhub-growth.html  clawhub-hash-format-urls.csv  clawhub-multi-ranking.html  clawhub-plugins.html  clawhub-projects-final-urls-final.csv  clawhub-projects.csv  extract_all_skills_correct.py  index.html  market-intelligence.html  package-lock.json  package.json  requirements.txt  skills.csv  tsconfig.json  use_html_slugs.py  vite.config.ts
config/: accounts.json  manual-seeds.json
deploy/: clawskillsscout.cron  deploy-server.sh
docs/: AGENT_SKILLS_IO_BREAKOUT_PROMPT.md  AISA_ANALYSIS_WORKFLOW.md  AI_PROJECT_MEMORY.md  DEPLOYMENT.md  Overview  PROJECT_MANUAL.md  (+5 more)
sucess/last30days/: README.md  SKILL.md  pyproject.toml
sucess/last30days/scripts/: briefing.py  compare.sh  dev-python.sh  evaluate_search_quality.py  generate-synthesis-inputs.py  last30days.py  run-briefing.sh  run-evaluate.sh  run-last30days.sh  run-tests.sh  run-watchlist.sh  store.py  sync.sh  test-aisa-planner.py  test-aisa-provider.py  test-v1-vs-v2.sh  verify_v3.py  watchlist.py
sucess/last30days/scripts/lib/: aisa.py  dedupe.py  env.py  fusion.py  github.py  grounding.py  http.py  instagram.py  normalize.py  pinterest.py  pipeline.py  planner.py  polymarket.py  providers.py  quality_nudge.py  query.py  reddit.py  reddit_enrich.py  reddit_public.py  relevance.py  render.py  resolve.py  schema.py  setup_wizard.py  signals.py  snippet.py  threads.py  tiktok.py  ui.py  xai_x.py  xquik.py  youtube_yt.py
(+184 files in other folders)
